# python-escpos-generator

./: pyproject.toml  setup.cfg
src/escpos-generator/: generator.py
src/escpos_generator/: __init__.py  codes.py  enums.py  generator.py  style.py
