[metadata]
name = escpos-generator
version = 0.0.1
author = Filippo Signorini
classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src